<?xml version="1.0"?>

<package format="3">

  <name>jo_description</name>
  <version>1.0.13</version>
  <description>Jo Description Package</description>

  <license>BSD-3</license>

  <maintainer email="michele.lisi@phd.unipi.it">Michele Lisi</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>